@@ -100,7 +100,10 @@ These fields should be considered read-only and not be modified directly.
 
 <!-- ##### FUNCTION gtk_table_new ##### -->
 <para>
-Used to create a new table widget. An initial size must be given by specifying how many rows and columns the table should have, although this can be changed later with gtk_table_resize().
+Used to create a new table widget. An initial size must be given by
+specifying how many rows and columns the table should have, although
+this can be changed later with gtk_table_resize().  @rows and @columns
+must both be in the range 0 .. 65535.
 </para>
 
 @rows: The number of rows the new table should have.
