@@ -1,3 +1,7 @@
+Fri Jun  8 12:33:29 2001  Jonathan Blandford  <jrb@redhat.com>
+
+	* gtk/tmpl/gtktable.sgml: fix bug #55921
+
 2001-06-05  Havoc Pennington  <hp@redhat.com>
 
 	* gtk/tmpl/gtkscale.sgml: more docs
